done without proper frontend

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <title>Home</title>
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <div class="container" id="index-container">
         <div>
-            <h1>hello</h1>
-            <button>Logout</button>
+            <form action="/logout" method="post">
+                <h1>Hello</h1>
+                <button type="submit">Logout</button>
+            </form>
         </div>
     </div>
+
 </body>
 </html>
