--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/signup.css">
 </head>
 <body>
     <div class="container">
-        <div >
+        <div id="signup-div">
             <form action="/signup" method="post">
-                <input type="text" name="username" placeholder="username">
-                <input type="email" name="email" placeholder="email">
-                <input type="password" name="password" placeholder="password">
+                <input type="text" name="username" placeholder="Username">
+                <input type="email" name="email" placeholder="Email">
+                <input type="password" name="password" placeholder="Password">
                 <button type="submit">Submit</button>
             </form>
         </div>
