--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -11,7 +11,7 @@
     <div class="container" id="index-container">
         <div>
             <form action="/logout" method="post">
-                <h1>Hello</h1>
+                <h1>Hello, you have successfully logged in.</h1>
                 <button type="submit">Logout</button>
             </form>
         </div>
