--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <div id="signup-div">
+            <h2>Signup</h2>
             <form action="/signup" method="post">
                 <input type="text" name="username" placeholder="Username">
                 <input type="email" name="email" placeholder="Email">
